--- a/github-page/src/App.css
+++ b/github-page/src/App.css
@@ -4,4 +4,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+}
+
+.nav-link.active {
+    background-color: lightsteelblue;
+}
